first formula and more models supported. Might go for a general approach

--- a/examples/demo.ipynb
+++ b/examples/demo.ipynb
@@ -38,6 +38,27 @@
    "source": [
     "main()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8d7bf18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from blas_probe import count_blas_flops, last_blas_flops\n",
+    "import numpy as np\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "with count_blas_flops():\n",
+    "    # cualquier cosa que llame a MKL/OpenBLAS:\n",
+    "    X = np.random.randn(5000, 40)\n",
+    "    y = np.random.randn(5000)\n",
+    "    m = LinearRegression().fit(X, y)\n",
+    "    _ = m.predict(X)\n",
+    "\n",
+    "print(\"BLAS FLOPs (aprox):\", last_blas_flops())\n"
+   ]
   }
  ],
  "metadata": {
