--- a/examples/high_level_usage.ipynb
+++ b/examples/high_level_usage.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "### Este es un notebook donde doy ejemplos de uso de las distintas funciones de mi librería flop_counter y sus interacciones con distintas librerías utilizadas en la ciencia de datos, de momento soporta NumPy, PyTorch y TensorFlow.\n",
     "\n",
-    "### Además, incluyo la fórmula que implementé para un análisis más similar al que hacen el AIC o el BIC"
+    "### En este notebook no viene nada de flop_counter.flop_information_criterion, para eso, véase ```fic_usage.ipynb```"
    ]
   },
   {
