--- a/examples/fic_refining.ipynb
+++ b/examples/fic_refining.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "2fc90180",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "69757f45",
    "metadata": {},
    "outputs": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "9846246e",
    "metadata": {},
    "outputs": [],
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "d16c5c97",
    "metadata": {},
    "outputs": [],
@@ -267,12 +267,23 @@
    "id": "2b739d28",
    "metadata": {},
    "source": [
-    "# $\\color{#dda}{\\text{}}$"
+    "# $\\color{#dda}{\\text{3. Experimentos}}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d91073b",
+   "metadata": {},
+   "source": [
+    "### $\\color{#dda}{\\text{3.1: Regresión lineal}}$\n",
+    "\n",
+    "##### Objetivo: Detectar modelos con igual número de parámetros pero diferentes FLOPs\n",
+    "##### Caso: Modelo simple vs modelo con operaciones innecesarias"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "a0afb505",
    "metadata": {},
    "outputs": [
@@ -293,12 +304,6 @@
     }
    ],
    "source": [
-    "# ===========================================================================\n",
-    "# EXPERIMENTO 1: REGRESIÓN LINEAL\n",
-    "# ===========================================================================\n",
-    "# Objetivo: Detectar modelos con igual número de parámetros pero diferentes FLOPs\n",
-    "# Caso: Modelo simple vs modelo con operaciones innecesarias\n",
-    "\n",
     "print_experiment_header(\n",
     "    \"EXPERIMENTO 1: REGRESIÓN LINEAL - EFICIENCIA COMPUTACIONAL\",\n",
     "    {\n",
@@ -317,16 +322,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "26737931",
-   "metadata": {},
-   "source": [
-    "# $\\color{#dda}{\\text{}}$"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "38f304a9",
    "metadata": {},
    "outputs": [],
@@ -360,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "a9007372",
    "metadata": {},
    "outputs": [
@@ -439,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "fa3f83d5",
    "metadata": {},
    "outputs": [
@@ -715,12 +712,15 @@
    "id": "9ac877e8",
    "metadata": {},
    "source": [
-    "# $\\color{#dda}{\\text{}}$"
+    "### $\\color{#dda}{\\text{3.2: Redes neuronales}}$\n",
+    "\n",
+    "##### Objetivo: Comparar arquitecturas con diferente profundidad y ancho\n",
+    "##### Caso: Wide vs Deep vs Balanced"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "f935a77d",
    "metadata": {},
    "outputs": [
@@ -742,12 +742,6 @@
     }
    ],
    "source": [
-    "# ===========================================================================\n",
-    "# EXPERIMENTO 2: REDES NEURONALES\n",
-    "# ===========================================================================\n",
-    "# Objetivo: Comparar arquitecturas con diferente profundidad y ancho\n",
-    "# Caso: Wide vs Deep vs Balanced\n",
-    "\n",
     "print_experiment_header(\n",
     "    \"EXPERIMENTO 2: REDES NEURONALES - ARQUITECTURAS\",\n",
     "    {\n",
@@ -767,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "057ca146",
    "metadata": {},
    "outputs": [],
@@ -825,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "48c4e88f",
    "metadata": {},
    "outputs": [
@@ -888,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "d0e3efdf",
    "metadata": {},
    "outputs": [
@@ -1164,12 +1158,15 @@
    "id": "531671af",
    "metadata": {},
    "source": [
-    "# $\\color{#dda}{\\text{}}$"
+    "### $\\color{#dda}{\\text{3.3: Regresión polinomial}}$\n",
+    "\n",
+    "##### Objetivo: Detectar overfitting y complejidad innecesaria\n",
+    "##### Caso: Polinomios de diferentes grados (el óptimo es grado 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "d14980c1",
    "metadata": {},
    "outputs": [
@@ -1193,12 +1190,6 @@
     }
    ],
    "source": [
-    "# ===========================================================================\n",
-    "# EXPERIMENTO 3: REGRESIÓN POLINOMIAL\n",
-    "# ===========================================================================\n",
-    "# Objetivo: Detectar overfitting y complejidad innecesaria\n",
-    "# Caso: Polinomios de diferentes grados (el óptimo es grado 2)\n",
-    "\n",
     "print_experiment_header(\n",
     "    \"EXPERIMENTO 3: REGRESIÓN POLINOMIAL - OVERFITTING\",\n",
     "    {\n",
@@ -1219,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "05f9d458",
    "metadata": {},
    "outputs": [],
@@ -1253,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "7fab1bc0",
    "metadata": {},
    "outputs": [
@@ -1310,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "f1d9c55d",
    "metadata": {},
    "outputs": [
@@ -1586,40 +1577,12 @@
    "id": "e467f0ea",
    "metadata": {},
    "source": [
-    "# $\\color{#dda}{\\text{}}$"
+    "# $\\color{#dda}{\\text{4. Análisis global y recomendaciones}}$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4e024a8f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "====================================================================================================\n",
-      "ANÁLISIS GLOBAL: MEJORES CONFIGURACIONES\n",
-      "====================================================================================================\n"
-     ]
-    }
-   ],
-   "source": [
-    "# ===========================================================================\n",
-    "# ANÁLISIS GLOBAL Y RECOMENDACIONES\n",
-    "# ===========================================================================\n",
-    "\n",
-    "print(f\"\\n\\n{'='*100}\")\n",
-    "print(\"ANÁLISIS GLOBAL: MEJORES CONFIGURACIONES\")\n",
-    "print(f\"{'='*100}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "8eab85ca",
    "metadata": {},
    "outputs": [
@@ -1714,38 +1677,6 @@
     "        print(\"   Beta alto: Peso significativo a parámetros\")\n",
     "    else:\n",
     "        print(\"   Beta moderado: Balance entre FLOPs y parámetros\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "61b56329",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "====================================================================================================\n",
-      "OPTIMIZACIÓN COMPLETADA\n",
-      "====================================================================================================\n",
-      "\n",
-      "DataFrames disponibles para análisis adicional:\n",
-      "   - df_exp1: Experimento de regresión lineal\n",
-      "   - df_exp2: Experimento de redes neuronales\n",
-      "   - df_exp3: Experimento de regresión polinomial\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(f\"\\n{'='*100}\")\n",
-    "print(\"OPTIMIZACIÓN COMPLETADA\")\n",
-    "print(f\"{'='*100}\")\n",
-    "print(f\"\\nDataFrames disponibles para análisis adicional:\")\n",
-    "print(f\"   - df_exp1: Experimento de regresión lineal\")\n",
-    "print(f\"   - df_exp2: Experimento de redes neuronales\")\n",
-    "print(f\"   - df_exp3: Experimento de regresión polinomial\")"
    ]
   }
  ],
