slight text changes

--- a/concept.ipynb
+++ b/concept.ipynb
@@ -966,7 +966,7 @@
    "id": "0e030b0a",
    "metadata": {},
    "source": [
-    "## $\\color{#dda}{\\text{12. Fórmula Final (y recomendaciones del autor)}}$"
+    "## $\\color{#dda}{\\text{12. Fórmula Final (y mis recomendaciones)}}$"
    ]
   },
   {
